@@ -70,7 +70,7 @@ protected:
 
   SF_Orientation_3()
   {
-      _static_epsilon = HUGE_VAL;
+      _static_epsilon = CGALi::infinity;
   }
 
 public:
