@@ -72,7 +72,7 @@ protected:
   
   SF_Side_of_oriented_sphere_3()
   {
-      _static_epsilon = HUGE_VAL;
+      _static_epsilon = CGALi::infinity;
   }
 
 public:
